QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- The connections widget is now being properly refreshed, due to
  some quirk in the QTreeWidget, which was preventing some items,
  specially the expanded ones, to disapear in the void.

- The xrun count stats can now be reset simply by middle clicking
  on the systray icon or the main window's display area (thanks to
  patch sent by Dominic Sacré).

- An improved version of the "shiny" background image was issued.
  The original somehow looked like two different images put together,
  probably most apparent on a bright TFT screen (by Dominic Sacré).

- A warning is now being issued, asking whether one wants to remove a
  corresponding Patchbay connection, when client/ports are being
  disconnected over the Connections window, thus avoiding automatic
  reconnection annoyance due to normal active Patchbay behavior.

- The infamous "Keep child windows always on top" global option is
  now supposed to behave a little better when disabled, layering
  child windows as naturally as far the window manager dictates.

- Input/Ouput Channel setting is now allowed to be greater than 32;
  the special default text is now displayed, also on Input/Output
  Latency and Priority settings spin-boxes. 

- Andreas Persson just sent a patch that makes it possible to compile
  and run qjackctl with Qt version 4.1. Applied whithout hesitation,
  thanks.


0.3.1a  2007-07-19  System-tray tooltip icon crash fix.

- An immediate showstopper crash upon client start was irradicated,
  which was affecting those with the system-tray icon disabled,
  as is the default (thanks to Ken Ellinwood for first reporting
  this sloppy one).


0.3.1   2007-07-18  Shallowed bug-fix release.

- The current DSP load percentage activity is now also displayed on
  the system-tray icon tooltip.

- An illusive but nasty Connections/Patchbay item tooltip crash bug